--- a/website/package.json
+++ b/website/package.json
@@ -7,14 +7,16 @@
     "fs-extra": "^6.0.1",
     "handlebars": "^4.0.11",
     "http-server": "^0.11.1",
+    "node-watch": "^0.5.8",
     "ufp-optimizer": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
     "config": "ufp-optimizer-cli config > ufp-optimizer.json",
-    "build": "ufp-optimizer-cli optimize src dist --config=ufp-optimizer.json ",
-    "generate": "node static/generate.js",
-    "serve": "http-server static/dist"
+    "build": "node src/generate.js && ufp-optimizer-cli optimize dist distOptimized --config=ufp-optimizer.json ",
+    "generate": "node src/generate.js",
+    "dev": "concurrently --kill-others \"node watch.js\" \"http-server ./dist\"",
+    "serve": "http-server ./dist"
   },
   "author": "",
   "license": "ISC"
