--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,7 @@
     "config": "ufp-optimizer-cli config > ufp-optimizer.json",
     "build": "node src/generate.js && ufp-optimizer-cli optimize dist distOptimized --config=ufp-optimizer.json ",
     "generate": "node src/generate.js",
-    "dev": "concurrently --kill-others \"node watch.js\" \"http-server ./dist\"",
+    "dev": "concurrently --kill-others \"http-server ./dist\" \"node watch.js\"",
     "serve": "http-server ./dist"
   },
   "author": "",
