* redesign crawler * implements crawler for coinbase.com

--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -51,9 +51,9 @@ services:
     restart: always
 
   crawl_simple:
-    image: froso/bitcoin-forks-crawler-simple
+    image: rainu/cryptocrawler
     build:
-      context: ./simple/
+      context: ./
     environment:
      - "CFG_JOB_0_URL=https://api.coinmarketcap.com/v1/ticker/?convert=EUR&limit=1000"
      - "CFG_JOB_0_DIR=/cmc_api/"
@@ -67,24 +67,11 @@ services:
      - "CFG_JOB_2_DIR=/bitcoin/"
      - "CFG_JOB_2_SUFFIX=.html"
      - "CFG_JOB_2_CRON=0 0 * * * *"
+    command: "simple.js"
     volumes:
      - ./output/simple/cmc_api:/cmc_api
      - ./output/simple/cmc_markets:/cmc_markets
      - ./output/simple/bitcoin:/bitcoin
-    restart: always
-
-  crawl_cnmarketcap_all_db:
-    image: rainu/cryptotrack-course-ng
-    environment:
-      - CFG_MONGO_HOST=db
-    restart: always
-    depends_on:
-      - db
-
-  db:
-    image: mongo
-    volumes:
-      - ./db:/data/db
     restart: always
 
   webserver_crawler:
@@ -94,3 +81,41 @@ services:
      - ./output:/web
     ports:
      - "9876:8080"
+
+###################
+#
+# CRAWLER INTO DB
+#
+
+  crawler_coinmarketcap:
+    image: rainu/cryptocrawler
+    build:
+      context: ./
+    environment:
+      - CFG_MONGO_HOST=db
+      - CFG_MONGO_DB=coinmarketcap
+      - CFG_CRON=0 0 */12 * * *
+    command: "coinmarketcap.js"
+    restart: always
+    depends_on:
+      - db
+
+  crawler_coinbase:
+    image: rainu/cryptocrawler
+    build:
+      context: ./
+    environment:
+      - CFG_MONGO_HOST=db
+      - CFG_MONGO_DB=coinbase
+      - CFG_JOB_0_SYMBOL=BTC
+      - CFG_JOB_0_CRON=0 0 */12 * * *
+    command: "coinbase.js"
+    restart: always
+    depends_on:
+      - db
+
+  db:
+    image: mongo
+    volumes:
+      - ./db:/data/db
+    restart: always
