--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "bitcoin-forks-crawler-coinmarketcap",
+  "name": "bitcoin-forks-crawler",
   "version": "1.0.0",
   "author": "rainu",
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
+    "cron": "^1.3.0",
     "http-status-codes": "^1.3.0",
-    "csv-parse": "^2.4.0",
     "moment": "^2.22.1",
-    "morgan": "^1.9.0",
+    "mongoose": "^5.1.3",
+    "rainu-env-parser": "1.0.0",
     "request": "^2.86.0",
     "winston": "^3.0.0-rc5"
   }
