--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -94,7 +94,9 @@ services:
     environment:
       - CFG_MONGO_HOST=db
       - CFG_MONGO_DB=coinmarketcap
-      - CFG_CRON=0 0 */12 * * *
+      - CFG_JOB_0_COIN_SYMBOL=BTC
+      - CFG_JOB_0_COIN_SLUG=bitcoin
+      - CFG_JOB_0_CRON=0 0 */12 * * *
     command: "coinmarketcap.js"
     restart: always
     depends_on:
