--- a/crawler/package.json
+++ b/crawler/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
+    "currency-codes": "^1.3.0",
     "http-status-codes": "^1.3.0",
     "moment": "^2.22.1",
     "mongoose": "^5.1.3",
