--- a/aggregator/course/package.json
+++ b/aggregator/course/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "mongoose": "^5.1.3",
-    "rainu-env-parser": "1.0.0",
-    "winston": "^3.0.0-rc5"
+    "cron": "^1.3.0",
+    "rainu-env-parser": "1.0.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
