--- a/aggregator/course/package.json
+++ b/aggregator/course/package.json
@@ -7,8 +7,9 @@
     "test": "mocha ./test --recursive"
   },
   "dependencies": {
-    "mongoose": "^5.1.3",
     "cron": "^1.3.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.3",
     "rainu-env-parser": "1.0.0"
   },
   "devDependencies": {
