implements and configure a fiat crawler (for the moment USD/EUR)

--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3'
 services:
 
+  crawler_fiat:
+    image: rainu/cryptocrawler
+    build:
+      context: ./
+    environment:
+      - CFG_MONGO_HOST=db
+      - CFG_MONGO_DB=fiat
+      - CFG_CRON=0 0 */12 * * *
+    command: "fiat.js"
+    restart: always
+    depends_on:
+      - db
+
   crawler_coinmarketcap:
     image: rainu/cryptocrawler
     build:
@@ -86,6 +99,8 @@ services:
       - CFG_SOURCE_2_NAME=binance.com
       - CFG_SOURCE_3_URL=mongodb://db/coinbase
       - CFG_SOURCE_3_NAME=coinbase.com
+      - CFG_SOURCE_4_URL=mongodb://db/fiat
+      - CFG_SOURCE_4_NAME=fiat
     command: "server.js"
     ports:
       - "3000:3000"
