implements new crawler for okex.com

--- a/crawler/docker-compose.yml
+++ b/crawler/docker-compose.yml
@@ -53,6 +53,19 @@ services:
     depends_on:
       - db
 
+  crawler_okex:
+    image: rainu/cryptocrawler
+    build:
+      context: ./
+    environment:
+      - CFG_MONGO_HOST=db
+      - CFG_MONGO_DB=okex
+      - CFG_CRON=0 0 */4 * * *
+    command: "okex.js"
+    restart: always
+    depends_on:
+      - db
+
   crawler_coinbase:
     image: rainu/cryptocrawler
     build:
@@ -89,8 +102,6 @@ services:
     build:
       context: ../aggregator/course
     environment:
-      - CFG_CRON=0 0 */1 * * *
-      - CFG_OUTPUT_DIR=/courses
       - CFG_SOURCE_0_URL=mongodb://db/coinmarketcap
       - CFG_SOURCE_0_NAME=coinmarketcap.com
       - CFG_SOURCE_1_URL=mongodb://db/bitfinex
@@ -101,6 +112,8 @@ services:
       - CFG_SOURCE_3_NAME=coinbase.com
       - CFG_SOURCE_4_URL=mongodb://db/fiat
       - CFG_SOURCE_4_NAME=fiat
+      - CFG_SOURCE_5_URL=mongodb://db/okex
+      - CFG_SOURCE_5_NAME=okex.com
     command: "server.js"
     ports:
       - "3000:3000"
