--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -20,6 +20,9 @@ COPY ./binance.js /application/binance.js
 COPY ./bitfinex/ /application/bitfinex
 COPY ./bitfinex.js /application/bitfinex.js
 
+COPY ./okex/ /application/okex
+COPY ./okex.js /application/okex.js
+
 COPY ./fiat/ /application/fiat
 COPY ./fiat.js /application/fiat.js
 
