--- a/crawler/package.json
+++ b/crawler/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.1.3",
     "rainu-env-parser": "1.0.0",
     "request": "^2.86.0",
-    "winston": "^3.0.0-rc5"
+    "winston": "^3.0.0-rc5",
+    "ws": "^5.2.1"
   }
 }
