--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: rainu/docker-node
 
 stages:
   - test
-  - dockerrize
+  - dockerize
 
 aggregator-test:
   image: node:alpine
@@ -13,9 +13,9 @@ aggregator-test:
     - npm install
     - npm run test
 
-dockerrize-crawler:
+dockerize-crawler:
   image: tmaier/docker-compose:latest
-  stage: dockerrize
+  stage: dockerize
   script:
     - docker login -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
     - cd crawler
@@ -25,9 +25,9 @@ dockerrize-crawler:
   only:
     - master
 
-dockerrize-aggregator:
+dockerize-aggregator:
   image: tmaier/docker-compose:latest
-  stage: dockerrize
+  stage: dockerize
   script:
     - docker login -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
     - cd crawler
