--- a/aggregator/course/package.json
+++ b/aggregator/course/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cron": "^1.3.0",
     "express": "^4.16.3",
+    "heapdump": "^0.3.9",
     "mongoose": "^5.1.3",
     "rainu-env-parser": "1.0.0"
   },
